--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,16 @@
             <artifactId>camunda-bpm-spring-boot-starter-external-task-client</artifactId>
             <version>7.15.0-alpha5</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
